Fix Polish translation a bit